# Concurrency

./: .dockerignore  Dockerfile  README.md  heroku.yml
backend/: CMakeLists.txt  database.cpp  database.h  messages.db-shm  messages.db-wal  server.cpp  sessionmanager.cpp  sessionmanager.h  vcpkg.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: WebSocketChat.css  WebSocketChat.jsx  main.jsx
